[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/warp_shine.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/InteractArrow.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Interactables/Teleporter.gd" type="Script" id=3]
[ext_resource path="res://Sprites/warp_dark.png" type="Texture" id=4]
[ext_resource path="res://Sprites/warp_particle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Shine:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shine_wiggle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shine:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.7, 0.6 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.263636, 0.454545, 0.822727, 1 )
colors = PoolColorArray( 0, 1, 0.976563, 0, 0.212769, 0.972656, 0.634269, 1, 0.138306, 0.757833, 0.804688, 1, 0.00784314, 0.160784, 0.262745, 1, 0.00784314, 0.160784, 0.262745, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 100

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
width = 100
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = -160.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[node name="Teleporter" type="Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Shine" type="Sprite" parent="."]
self_modulate = Color( 0.368627, 1, 0.85098, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shine_wiggle"
anims/RESET = SubResource( 2 )
anims/shine_wiggle = SubResource( 3 )

[node name="Aura" type="Particles2D" parent="."]
amount = 5
process_material = SubResource( 8 )
texture = ExtResource( 5 )

[node name="InteractArrow" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -32 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
